[package]
name = "adpi"
version = "0.1.0"
edition = "2021"
description = "DPI-bypassing transparent proxy"
authors = ["Winston Smith"]
readme = "README.md"
repository = "https://github.com/1984-Winston/adpi"
license = "MIT"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
libc = "0.2.158"
linux-raw-sys = { version = "0.6.5", features = ["net"] }
socket2 = "0.5.7"
tls-parser = "0.11.0"
tokio = { version = "1.39.3", features = [
    "io-util",
    "net",
    "rt-multi-thread",
    "signal",
    "time",
] }
